# innowise_laboratory

lecture_1/: Readme.md
lecture_1/my_project/: README.md  main.py  pyproject.toml
lecture_1/my_project/tests/: test_main.py
lecture_2/: .gitignore  README.md  mini_profile.py  requirements.txt
lecture_3/: .gitignore  README.md  requirements.txt  student_grade_analyzer.py
lecture_4/: school.db  school.sql
lecture_5/book_api/: README.md  crud.py  database.py  dependencies.py  main.py  models.py  requirements.txt  schemas.py  start.bat
